test/files/pos/t8844.scala
object Example {
  type S[A] = String
  def foo(s: S[_]): String = s
}
