test/files/neg/macro-invalidsig-context-bounds/Macros_Test_1.scala
object Macros {
  def foo[U] = macro Impls.foo[U]
}

object Test extends App {
  import Macros._
  println(foo[String])
}